--- a/unsubscribe/src/main/resources/application.yaml
+++ b/unsubscribe/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 # 配置MySQL数据库的连接参数
 spring:
    datasource:
-      url: jdbc:mysql://127.0.0.1:3306/zhh_1?useSSL=false&serverTimezone=CST&allowPublicKeyRetrieval=true
-      username: zhh
+      url: jdbc:mysql://127.0.0.1:3306/zyz_1?useSSL=false&serverTimezone=CST&allowPublicKeyRetrieval=true
+      username: zyz
       password: 1234
    jpa:
 # 自动生产DDL语句（数据定义语言），用于实现表结构自动创建
@@ -16,7 +16,7 @@ spring:
       port: 6379
       database: 15
 # 修改运行时的端口号，因为一个端口号只能被一个人使用。
-server.port: 8094
+server.port: 8074
 # ----------------
 # Orphan comments:
 # ----------------
